--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: SidecarT Docs
+description: The SidecarT Developers Documentation site
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://docs.sidecart.xyz
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/diegoparrilla/sidecart-site-dev-docs
