--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,6 @@ compress_html:
   #   envs: all
 
 # Versions of SidecarT
-FIRMWARE_VERSION: STABLE-v0.0.11
-FIRMWARE_BETA_VERSION: BETA-v0.0.12
+FIRMWARE_VERSION: v0.0.11
+FIRMWARE_BETA_VERSION: beta-v0.0.12
 TEST_FIRMWARE_VERSION: v0.0.3
