--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: SidecarT Docs
 description: The SidecarT Developers Documentation site
-domain: docs.sidecart.xyz
+domain: docs.sidecartridge.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://docs.sidecart.xyz
+url: https://docs.sidecartridge.com
 repository: diegoparrilla/sidecart-site-dev-docs
 theme: just-the-docs
 favicon_ico: "/assets/images/favicon.ico"
@@ -44,7 +44,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "SidecarT website":
-    - "https://sidecart.xyz"
+    - "https://sidecartridge.com"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
@@ -56,7 +56,7 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 # External navigation links
 nav_external_links:
   - title: SidecarT Website
-    url: https://sidecart.xyz
+    url: https://sidecartridge.com
 
 # Back to top link
 back_to_top: true
