--- a/_config.yml
+++ b/_config.yml
@@ -118,3 +118,7 @@ compress_html:
 FIRMWARE_VERSION: v0.0.11
 FIRMWARE_BETA_VERSION: beta-v0.0.12
 TEST_FIRMWARE_VERSION: v0.0.3
+
+# Google Analytics Tracking (optional)
+ga_tracking: G-6VT9RXTJ2N
+ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
