--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: SidecarT Docs
-description: The SidecarT Developers Documentation site
+title: SidecarTridge Docs
+description: The SidecarTridge Developers Documentation site
 domain: docs.sidecartridge.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://docs.sidecartridge.com
@@ -43,7 +43,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "SidecarT website":
+  "SidecarTridge website":
     - "https://sidecartridge.com"
 
 # Makes Aux links open in a new tab. Default is false
@@ -55,14 +55,14 @@ nav_sort: case_sensitive # Capital letters sorted before lowercase
 
 # External navigation links
 nav_external_links:
-  - title: SidecarT Website
+  - title: SidecarTridge Website
     url: https://sidecartridge.com
 
 # Back to top link
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "© 2024 SidecarT - GOODDATA LABS SL"
+footer_content: "© 2024 GOODDATA LABS SL"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
