--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: SidecarTridge Docs
-description: The SidecarTridge Developers Documentation site
+description: SidecarTridge Products Documentation site
 domain: docs.sidecartridge.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://docs.sidecartridge.com
@@ -36,6 +36,35 @@ exclude:
    - Dockerfile
  # theme test code
    - fixtures/
+
+# Enable or disable the site search
+# Supports true (default) or false
+search_enabled: true
+search:
+  # Split pages into sections that can be searched individually
+  # Supports 1 - 6, default: 2
+  heading_level: 2
+  # Maximum amount of previews per search result
+  # Default: 3
+  previews: 2
+  # Maximum amount of words to display before a matched word in the preview
+  # Default: 5
+  preview_words_before: 3
+  # Maximum amount of words to display after a matched word in the preview
+  # Default: 10
+  preview_words_after: 3
+  # Set the search token separator
+  # Default: /[\s\-/]+/
+  # Example: enable support for hyphenated search words
+  tokenizer_separator: /[\s/]+/
+  # Display the relative url in search results
+  # Supports true (default) or false
+  rel_url: true
+  # Enable or disable the search button that appears in the bottom right corner of every page
+  # Supports true or false (default)
+  button: false
+  # Focus the search input by pressing `ctrl + focus_shortcut_key` (or `cmd + focus_shortcut_key` on macOS)
+  focus_shortcut_key: 'k'
 
 # Enable or disable heading anchors
 heading_anchors: true
@@ -96,6 +125,8 @@ callouts:
     color: red
 
 plugins:
+  - jekyll-include-cache
+  - jekyll-github-metadata
   - jekyll-include-cache
 
 kramdown:
