--- a/_config.yml
+++ b/_config.yml
@@ -147,8 +147,8 @@ compress_html:
   #   envs: all
 
 # Versions of SidecarT
-FIRMWARE_VERSION: v0.0.11
-FIRMWARE_BETA_VERSION: beta-v0.0.18b
+FIRMWARE_VERSION: v1.0.0
+FIRMWARE_BETA_VERSION: v1.0.0
 TEST_FIRMWARE_VERSION: v0.0.3
 
 # Versions of the SidecarTridge TOS
