--- a/_config.yml
+++ b/_config.yml
@@ -149,6 +149,7 @@ compress_html:
 # Versions of SidecarT
 FIRMWARE_VERSION: v1.0.1
 FIRMWARE_BETA_VERSION: v1.0.1
+FIRMWARE_ALPHA_VERSION: v2.0.0alpha
 TEST_FIRMWARE_VERSION: v0.0.3
 
 # Versions of the SidecarTridge TOS
