New front page for the TOS Emulator

--- a/_config.yml
+++ b/_config.yml
@@ -154,9 +154,11 @@ TEST_FIRMWARE_VERSION: v0.0.3
 
 # Versions of the SidecarTridge TOS
 SIDECARTRIDGE_TOS_FIRMWARE_VERSION: v2.1.0
+SIDECARTRIDGE_TOS_FIRMWARE_V3_VERSION: v3.0.0
 
 # Versions of the SidecarTridge TOS Switcher
 SIDECARTRIDGE_TOS_SWITCHER_VERSION: v2.1.0
+SIDECARTRIDGE_TOS_FIRMWARE_V3_VERSION: v3.0.0
 
 # Google Analytics Tracking (optional)
 ga_tracking: G-6VT9RXTJ2N
