--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,9 @@ FIRMWARE_BETA_VERSION: v1.0.1
 FIRMWARE_ALPHA_VERSION: v2.0.5alpha
 TEST_FIRMWARE_VERSION: v0.0.3
 
+# Versions of microfirmwares
+MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.1dev
+
 # Versions of the SidecarTridge TOS
 SIDECARTRIDGE_TOS_FIRMWARE_VERSION: v2.1.0
 SIDECARTRIDGE_TOS_FIRMWARE_V3_VERSION: v3.0.0
