--- a/_config.yml
+++ b/_config.yml
@@ -154,6 +154,7 @@ TEST_FIRMWARE_VERSION: v0.0.3
 
 # Versions of microfirmwares
 MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.1dev
+MICROFIRMWARE_BROWSER_VERSION: v1.0.1beta
 
 # Versions of the SidecarTridge TOS
 SIDECARTRIDGE_TOS_FIRMWARE_VERSION: v2.1.0
