--- a/_config.yml
+++ b/_config.yml
@@ -155,6 +155,10 @@ TEST_FIRMWARE_VERSION: v0.0.3
 # Versions of microfirmwares
 MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.1dev
 MICROFIRMWARE_BROWSER_VERSION: v1.0.1beta
+MICROFIRMWARE_TESTROM_VERSION: v0.0.3
+MICROFIRMWARE_DRIVES_EMULATOR_VERSION: v1.0.5alpha
+MICROFIRMWARE_RTC_EMULATOR_VERSION: v2.0.0
+MICROFIRMWARE_ROM_EMULATOR_VERSION: v2.0.2
 
 # Versions of the SidecarTridge TOS
 SIDECARTRIDGE_TOS_FIRMWARE_VERSION: v2.1.0
