--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ nav_external_links:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "© 2024 GOODDATA LABS SL"
+footer_content: "© 2024-25 GOODDATA LABS SL | Looking for support? Join our [Discord](https://discord.com/invite/u73QP9MEYC) or [email us!](mailto:sidecart+support@gooddatalabs.com)"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
