--- a/_config.yml
+++ b/_config.yml
@@ -156,7 +156,7 @@ TEST_FIRMWARE_VERSION: v0.0.3
 MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.1dev
 MICROFIRMWARE_BROWSER_VERSION: v1.0.1beta
 MICROFIRMWARE_TESTROM_VERSION: v0.0.3
-MICROFIRMWARE_DRIVES_EMULATOR_VERSION: v1.0.5alpha
+MICROFIRMWARE_DRIVES_EMULATOR_VERSION: v1.0.6beta
 MICROFIRMWARE_RTC_EMULATOR_VERSION: v2.0.0
 MICROFIRMWARE_ROM_EMULATOR_VERSION: v2.0.2
 
