New v1.0.3beta version

--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,7 @@ FIRMWARE_ALPHA_VERSION: v2.0.7beta
 TEST_FIRMWARE_VERSION: v0.0.3
 
 # Versions of microfirmwares
-MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.1dev
+MICROFIRMWARE_GPU_DEMO_VERSION: v1.0.3beta
 MICROFIRMWARE_BROWSER_VERSION: v1.1.0
 MICROFIRMWARE_TESTROM_VERSION: v0.0.3
 MICROFIRMWARE_DRIVES_EMULATOR_VERSION: v1.0.6beta
