--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ nav_external_links:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "<span>© 2024-25 GOODDATA LABS SL | Looking for support? Join our <a href='https://discord.com/invite/u73QP9MEYC'>Discord</a> or <a href='mailto:sidecart+support@gooddatalabs.com'>email us!</a></span>"
+footer_content: "<span>© 2024-25 GOODDATA LABS SL | Looking for support? Join our <a href='https://discord.com/invite/u73QP9MEYC'>Discord</a> or <a href='mailto:support@gooddatalabs.com'>email us!</a></span>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
